# qsystem-from-evandro-crr

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  makefile  setup.py
doxygen/: Doxyfile  mainpage.md
example/: factoring.ipynb
header/: gate.h  gates.h  qsystem.h  using.h
src/: gate.cpp  gates.cpp  microtar.c  qs_ancillas.cpp  qs_errors.cpp  qs_evol.cpp  qs_make.cpp  qs_measure.cpp  qs_utility.cpp  qs_valid.cpp  qsystem.i  qsystem.py.patch  utility.cpp
